trunk/Archive2/48/54e4cca68a7436/output
+ g++ -std=c++11 -O3 -march=native -DNDEBUG -Wall -Wextra -pedantic -pthread main.cpp -c
main.cpp:9:40: error: overflow in constant expression [-fpermissive]
 constexpr auto fib_46 = fib(int32_t{46});
                                        ^
main.cpp:11:40: error: overflow in constant expression [-fpermissive]
 constexpr auto fib_92 = fib(int64_t{92});
                                        ^
main.cpp:13:43: error: overflow in constant expression [-fpermissive]
 constexpr auto fib_184 = fib(__int128{184});
                                           ^
